kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esi-proxy
  labels:
    app: esi-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: esi-proxy
  template:
    metadata:
      labels:
        app: esi-proxy
    spec:
      containers:
      - name: esi-proxy
        image: ghcr.io/eve-kill/esi-proxy:latest
        ports:
        - containerPort: 9501
        volumeMounts:
        - name: esi-proxy-name
          mountPath: /tmp/esi-proxy.name
      volumes:
      - name: esi-proxy-name
        configMap:
          name: esi-proxy-config

---
apiVersion: v1
kind: Service
metadata:
  name: esi-proxy
spec:
  selector:
    app: esi-proxy
  ports:
    - protocol: TCP
      port: 9501
      targetPort: 9501

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esi-proxy-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: esi.eve-kill.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: esi-proxy
            port:
              number: 9501
  tls:
  - hosts:
    - esi.eve-kill.com
    secretName: esi-proxy-tls
